--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -142,10 +142,10 @@
                       <label>E-mail</label>
                       <input class="form-control" type="email" name="email" value="<%= current_user.email %>" />
                     </div>
-                    <div class="form-group col-xs-12 col-md-6">
+                    <!-- <div class="form-group col-xs-12 col-md-6">
                       <label>Password</label>
                       <input class="form-control" type="password" name="password" value="" />
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               <% end %>
