--- a/app/views/client/profile/parts/_profile-nav.html.erb
+++ b/app/views/client/profile/parts/_profile-nav.html.erb
@@ -2,5 +2,5 @@
   <li id="menu-my-tickets"><a href="/profile/tickets">My Tickets</a></li>
   <!-- <li id="menu-wishlist"><a href="/profile/wishlist">Wishlist</a></li>   -->
   <li id="menu-settings"><a href="/profile/settings">Account</a></li>
-  <li id="menu-logout"><a href="/profile/logout">Log out</a></li>
+  <!-- <li id="menu-logout"><a href="/profile/logout">Log out</a></li> -->
 </ul>
