--- a/app/views/client/profile/settings.html.erb
+++ b/app/views/client/profile/settings.html.erb
@@ -8,6 +8,11 @@
 
     <div class="row">
       <div class="col-xs-12 col-md-9">
+        <a href="/auth/facebook">Connect Facebook</a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-md-9">
         <%= form_tag '/profile/settings' do  %>
           <div class="form-header">
             <h1 class="form-title">Account Settings</h1>
