--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,39 +1,49 @@
-<p class="text-xs-center">Sign Up</p>
 
-<br>
-  <center>
-    <%= render "users/shared/social" %>
-  </center>
-<br>
+<div class="section" id="auth-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <p class="text-xs-center">Sign Up</p>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+        <br>
+          <center>
+            <%= render "users/shared/social" %>
+          </center>
+        <br>
 
-  <div class="form-group">
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true, class: 'form-control underlined', placeholder: 'Your email address', required: true %>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= devise_error_messages! %>
+
+          <div class="form-group">
+            <%= f.label :email %>
+            <%= f.email_field :email, autofocus: true, class: 'form-control underlined', placeholder: 'Your email address', required: true %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :password %>
+            <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %>
+            <%= f.password_field :password, autocomplete: 'off', class: 'form-control underlined', placeholder: 'Your password', required: true %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :password_confirmation %>
+            <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control underlined', placeholder: 'Confirm your password', required: true %>
+          </div>
+
+          <div class="form-group">
+            <%= f.submit "Sign up", class: 'btn btn-block btn-primary' %>
+          </div>
+
+          <div class="form-group">
+            <p class="text-muted text-xs-center">Already have an account?
+              <%= render "users/shared/signin" %>
+            </p>
+          </div>
+        <% end %>
+
+      </div>
+    </div>
   </div>
-
-  <div class="form-group">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %>
-    <%= f.password_field :password, autocomplete: 'off', class: 'form-control underlined', placeholder: 'Your password', required: true %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control underlined', placeholder: 'Confirm your password', required: true %>
-  </div>
-
-  <div class="form-group">
-    <%= f.submit "Sign up", class: 'btn btn-block btn-primary' %>
-  </div>
-
-  <div class="form-group">
-    <p class="text-muted text-xs-center">Already have an account?
-      <%= render "users/shared/signin" %>
-    </p>
-  </div>
-<% end %>
+</div>
