--- a/app/views/layouts/parts/_login-form.html.erb
+++ b/app/views/layouts/parts/_login-form.html.erb
@@ -1,39 +1,39 @@
-  <div id="login-form">
-    <%= form_tag 'profile/login' do  %>
-      <input type="hidden" name="continue" value="" />
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title">Login</h4>
-        </div>
-        <div class="modal-body">
-          <div class="fb-login">
-            <a href="/auth/facebook"><img src="/src/images/theme/fb-login.png" height="40" /></a>
-            <div class="seperator">
-              <div class="inner">
-                <span>OR</span>
-              </div>
+<div id="login-form">
+  <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+    <input type="hidden" name="continue" value="" />
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Login</h4>
+      </div>
+      <div class="modal-body">
+        <div class="fb-login">
+          <a href="/auth/facebook"><img src="/src/images/theme/fb-login.png" height="40" /></a>
+          <div class="seperator">
+            <div class="inner">
+              <span>OR</span>
             </div>
           </div>
-          <div class="form-group">
-            <label>Your E-mail</label>
-            <input class="form-control" type="email" name="email" value="" />
-          </div>
-          <div class="form-group">
-            <label>Your Password</label>
-            <input class="form-control" type="password" name="password" value="" />
-          </div>
-          <button class="btn btn-block btn-daydash btn-daydash-green-1">Login</button>
-          <div class="forgot-password">
-            <a href="#">Forgot Password?</a>
-          </div>
         </div>
-        <div class="modal-footer">
-          <div>
-            Don't have an account?
-            <a href="#" onclick="$('#login-modal #login-form').hide(); $('#login-modal #register-form').show(); return false;">Register Free!</a>
-          </div>
+        <div class="form-group">
+          <label>Your E-mail</label>
+          <%= f.email_field :email, class: 'form-control' %>
         </div>
-      </div><!-- /.modal-content -->
-    <% end %>
-  </div>
+        <div class="form-group">
+          <label>Your Password</label>
+          <%= f.password_field :password, class: 'form-control' %>
+        </div>
+        <%= f.submit "Login", class: 'btn btn-block btn-daydash btn-daydash-green-1' %>
+        <div class="forgot-password">
+          <a href="#">Forgot Password?</a>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <div>
+          Don't have an account?
+          <a href="#" onclick="$('#login-modal #login-form').hide(); $('#login-modal #register-form').show(); return false;">Register Free!</a>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
