--- a/app/views/client/profile/parts/_profile-nav.html.erb
+++ b/app/views/client/profile/parts/_profile-nav.html.erb
@@ -1,6 +1,8 @@
 <ul class="nav nav-pills nav-daydash" id="profile-nav">
-  <li id="menu-my-tickets"><a href="/profile/tickets">My Tickets</a></li>
+  <li id="menu-my-tickets">
+    <%= link_to "My Tickets", client_profile_tickets_path %>
+  </li>
   <!-- <li id="menu-wishlist"><a href="/profile/wishlist">Wishlist</a></li>   -->
-  <li id="menu-settings"><a href="/profile/settings">Account</a></li>
+  <li id="menu-settings"><%= link_to "Account", client_profile_settings_path(current_user) %></li>
   <!-- <li id="menu-logout"><a href="/profile/logout">Log out</a></li> -->
 </ul>
