--- a/app/views/client/profile/tickets.html.erb
+++ b/app/views/client/profile/tickets.html.erb
@@ -19,30 +19,34 @@
           </div>
           <div class="list-body">
             <% @tickets.each do |ticket| %>
-            <div class="ticket card-side-cover">
-              <a class="cover" style="background-image: url(<%= ticket.event.galleries.first.media(:thumb) %>);" href="#"></a>
-              <div class="info">
-                <div class="info-body">
-                  <h4 class="title"><a href="#"><%= ticket.event.title %></a></h4>
-                  <div class="meta date">วันเสาร์ ที่ 22 สิงหาคม, 8:00 PM</div>
-                  <div class="meta location">Thonglor House Club, ซอยทองหล่อ</div>
-                </div>
-                <div class="info-footer">
-                  <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                      <span class="ticket-price">฿ <%= ticket[:price] %></span>
-                      <span class="purchase-date">purchased on <%= ticket[:purchased_date] %></span>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                      <ul class="list-inline list-action-nav pull-right">
-                        <li><a href="#">View Ticket</a></li>
-                        <li><a href="<%= client_event_path(ticket.event.id) %>">View Event</a></li>
-                      </ul>
+              <div class="ticket card-side-cover">
+                <a class="cover" style="background-image: url(<%= ticket.event.galleries.first.media(:thumb) %>);" href="#"></a>
+                <div class="info">
+                  <div class="info-body">
+                    <h4 class="title">
+                      <%= link_to client_profile_ticket_path(current_user.id, ticket.id) do %>
+                        <%= ticket.event.title %>
+                      <% end %>
+                    </h4>
+                    <div class="meta date">วันเสาร์ ที่ 22 สิงหาคม, 8:00 PM</div>
+                    <div class="meta location">Thonglor House Club, ซอยทองหล่อ</div>
+                  </div>
+                  <div class="info-footer">
+                    <div class="row">
+                      <div class="col-xs-12 col-md-7">
+                        <span class="ticket-price">฿ <%= ticket.event.first_section.price %></span>
+                        <span class="purchase-date">purchased on <%= ticket.event.first_section.event_time_human %></span>
+                      </div>
+                      <div class="col-xs-12 col-md-5">
+                        <ul class="list-inline list-action-nav pull-right">
+                          <li><%= link_to "View Ticket", client_profile_ticket_path(current_user.id, ticket.id) %></li>
+                          <li><a href="<%= client_event_path(ticket.event.id) %>">View Event</a></li>
+                        </ul>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
             <% end %>
           </div>
         </div>
