--- a/app/views/organizer/parts/_organizer-nav.html.erb
+++ b/app/views/organizer/parts/_organizer-nav.html.erb
@@ -1,6 +1,10 @@
 <nav class="nav nav-pills nav-daydash" id="organizer-nav">
-	<li id="menu-event-list"><a href="/organizer/events/">Manage Events</a></li>
-	<li id="menu-create-event"><a href="/organizer/events/new">Create New Event</a></li>
-	<li id="menu-settings"><a href="/organizer/settings">Account</a></li>
-	<li id="menu-logout"><a href="/organizer/logout">Logout</a></li>
+  <li id="menu-event-list">
+    <%= link_to "Manage Event", organizer_events_path %>
+  </li>
+  <li id="menu-create-event">
+    <%= link_to "Create New Event", new_organizer_event_path %>
+  </li>
+  <!-- <li id="menu-settings"><a href="/organizer/settings">Account</a></li>
+  <li id="menu-logout"><a href="/organizer/logout">Logout</a></li> -->
 </nav>
