--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -98,7 +98,7 @@
             <!-- <input type="hidden" name="" value="<%= section.id %>"> -->
             <tr>
               <td>
-                <div class="ticket-name"><%= section.title %></div>
+                <div class="ticket-name"><%= section.title %> <%= section.event_time_human %></div>
                 <div class="ticket-meta">
                   <span class="ticket-price">฿ <%= section.price %></span> <span class="ticket-quantity">x 1</span>
                 </div>
