update admin and model schema

--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="card-box">
       <!-- <h4 class="m-t-0 m-b-30 header-title"><b>Fields validation</b></h4> -->
 
-      <%= form_for @event, url: management_event_path(@event), medthod: :post, html: { class: 'form-horizontal group-border-dashed' } do |f| %>
+      <%= form_for @event, url: admin_event_path(@event), medthod: :post, html: { class: 'form-horizontal group-border-dashed' } do |f| %>
         <div class="row">
           <div class="col-md-7">
             <h4>Event Details</h4>
@@ -125,7 +125,7 @@
                 <% @event.galleries.each do |g| %>
                 <div class="m-t-20">
                   <%= image_tag g.media(:thumb), width: '100%', height: :auto %>
-                  <%= link_to('Delete', delete_attachment_management_events_path(@event.to_url, g.id), method: :delete) %>
+                  <%= link_to('Delete', delete_attachment_admin_events_path(@event.to_url, g.id), method: :delete) %>
                 </div>
                 <% end %>
               </div>
