--- a/app/views/admin/events/new.html.erb
+++ b/app/views/admin/events/new.html.erb
@@ -3,7 +3,7 @@
     <div class="card-box">
       <!-- <h4 class="m-t-0 m-b-30 header-title"><b>Fields validation</b></h4> -->
 
-      <%= form_for @event, url: management_events_path, medthod: :post, html: { class: 'form-horizontal group-border-dashed' } do |f| %>
+      <%= form_for @event, url: admin_events_path, medthod: :post, html: { class: 'form-horizontal group-border-dashed' } do |f| %>
         <div class="row">
           <div class="col-md-7">
             <h4>Event Details</h4>
