--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -7,7 +7,7 @@
               Create responsive tables by wrapping any <code>.table</code> in <code>.table-responsive</code>
               to make them scroll horizontally on small devices (under 768px).
           </p>
-          <%= link_to "Add", new_management_event_path, target: '_self', class: 'btn btn-primary btn-custom waves-effect w-md waves-light m-b-5' %>
+          <%= link_to "Add", new_admin_event_path, target: '_self', class: 'btn btn-primary btn-custom waves-effect w-md waves-light m-b-5' %>
 
           <div class="table-responsive">
             <table class="table m-0">
@@ -25,12 +25,12 @@
                   <tr>
                     <td>
                       <% if event.galleries.present? %>
-                        <%= link_to (image_tag event.galleries.first.try(:media, :thumb), width: '100'), edit_management_event_path(event.id), target: '_self' %>
+                        <%= link_to (image_tag event.galleries.first.try(:media, :thumb), width: '100'), edit_admin_event_path(event.id), target: '_self' %>
                       <% else %>
                         NULL
                       <% end %>
                     </td>
-                    <td><%= link_to event.title, edit_management_event_path(event.id), target: '_self' %></td>
+                    <td><%= link_to event.title, edit_admin_event_path(event.id), target: '_self' %></td>
                     <td><%= event.category.try(:title) %></td>
                     <td><%= "#{event.user.try(:first_name)} #{event.user.try(:last_name)}" %></td>
                     <td><%= event.location_name %></td>
