--- a/app/views/client/profile/tickets.html.erb
+++ b/app/views/client/profile/tickets.html.erb
@@ -35,7 +35,7 @@
                     <div class="row">
                       <div class="col-xs-12 col-md-7">
                         <span class="ticket-price">฿ <%= ticket.event.first_section.price %></span>
-                        <span class="purchase-date">purchased on <%= ticket.event.first_section.event_time_human %></span>
+                        <span class="purchase-date">purchased on <%= ticket.created_at %></span>
                       </div>
                       <div class="col-xs-12 col-md-5">
                         <ul class="list-inline list-action-nav pull-right">
