--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -40,7 +40,7 @@
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <% if current_user.present? %>
-                  <% if current_user.is_organizer? %>
+                  <% if current_user.can_organizer? %>
                     <li>
                       <%= link_to "Organizer", "/organizer" %>
                     </li>
