--- a/app/views/layouts/parts/_nav.html.erb
+++ b/app/views/layouts/parts/_nav.html.erb
@@ -57,7 +57,7 @@
     </div>
   </div>
 
-  <% if App.is_admin? %>
+  <% if current_user.is_admin? %>
     <!-- End topbar -->
     <div class="navbar-custom">
       <div class="container">
