--- a/app/views/organizer/parts/_organizer-nav.html.erb
+++ b/app/views/organizer/parts/_organizer-nav.html.erb
@@ -1,4 +1,7 @@
 <nav class="nav nav-pills nav-daydash" id="organizer-nav">
+  <li id="menu-dashboard">
+    <%= link_to "Dashboard", organizer_path %>
+  </li>
   <li id="menu-event-list">
     <%= link_to "Manage Event", organizer_events_path %>
   </li>
