--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -20,7 +20,7 @@
                 <h4 class="title text-left">
                   <%= link_to @event.title, client_event_path(@event.to_url) %>
                 </h4>
-                <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= @section.event_time.strftime("%A %d %B, %H:%M") %></div>
+                <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= @section.to_event_human %></div>
                 <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= @event.location_name %></div>
               </div>
             </div>
