--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -16,7 +16,7 @@
       <div class="col-xs-12 col-md-7">
         <div class="row">
           <div class="col-xs-12">
-            <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= @section.event_time.strftime("%A %d %B, %H:%M") %></div>
+            <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= @section.to_event_human %></div>
             <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= @event.location_name %></div>
           </div>
         </div>
@@ -74,7 +74,7 @@
               <h4 class="title text-left">
                 <%= link_to event.title, client_event_path(event.to_url) %>
               </h4>
-              <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.first_section.event_time_human %></div>
+              <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.first_section.to_event_human %></div>
               <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= event.location_name %></div>
             </div>
           </div>
@@ -98,7 +98,7 @@
             <!-- <input type="hidden" name="" value="<%= section.id %>"> -->
             <tr>
               <td>
-                <div class="ticket-name"><%= section.title %> <%= section.event_time_human %></div>
+                <div class="ticket-name"><%= section.title %> <%= section.to_event_human %></div>
                 <div class="ticket-meta">
                   <span class="ticket-price">฿ <%= section.price %></span> <span class="ticket-quantity">x 1</span>
                 </div>
