--- a/app/views/client/profile/ticket.html.erb
+++ b/app/views/client/profile/ticket.html.erb
@@ -27,14 +27,14 @@
                         <%= ticket.event.title %>
                       <% end %>
                     </h4>
-                    <div class="meta date">วันเสาร์ ที่ 22 สิงหาคม, 8:00 PM</div>
-                    <div class="meta location">Thonglor House Club, ซอยทองหล่อ</div>
+                    <div class="meta date"><%= ticket.section.to_event_human %></div>
+                    <div class="meta location"><%= ticket.event.location_name %></div>
                   </div>
                   <div class="info-footer">
                     <div class="row">
                       <div class="col-xs-12 col-md-7">
                         <span class="ticket-price">฿ <%= ticket.event.first_section.price %></span>
-                        <span class="purchase-date">purchased on <%= ticket.event.first_section.event_time_human %></span>
+                        <span class="purchase-date">purchased on <%= ticket.payment.purchased_status %></span>
                       </div>
                     </div>
                   </div>
