--- a/app/views/client/profile/tickets.html.erb
+++ b/app/views/client/profile/tickets.html.erb
@@ -12,35 +12,35 @@
           <div class="list-header">
             <h1>My Tickets</h1>
             <ul class="list-inline">
-              <li><a href="#">Live (<%= @tickets.count %>)</a></li>
+              <li><a href="#">Live (<%= @payments.count %>)</a></li>
               <li>|</li>
               <li><a href="#">Past (0)</a></li>
             </ul>
           </div>
           <div class="list-body">
-            <% @tickets.each do |ticket| %>
+            <% @payments.each do |payment| %>
               <div class="ticket card-side-cover">
-                <a class="cover" style="background-image: url(<%= ticket.event.galleries.first.media(:thumb) %>);" href="#"></a>
+                <a class="cover" style="background-image: url(<%= payment.event.galleries.first.media(:thumb) %>);" href="#"></a>
                 <div class="info">
                   <div class="info-body">
                     <h4 class="title">
-                      <%= link_to client_profile_ticket_path(current_user.id, ticket.id) do %>
-                        <%= ticket.event.title %>
+                      <%= link_to client_profile_ticket_path(current_user.id, payment.id) do %>
+                        <%= payment.event.title %>
                       <% end %>
                     </h4>
-                    <div class="meta date">วันเสาร์ ที่ 22 สิงหาคม, 8:00 PM</div>
-                    <div class="meta location">Thonglor House Club, ซอยทองหล่อ</div>
+                    <div class="meta date"><%= payment.tickets.first.section.to_event_human %></div>
+                    <div class="meta location"><%= payment.event.location_name %></div>
                   </div>
                   <div class="info-footer">
                     <div class="row">
                       <div class="col-xs-12 col-md-7">
-                        <span class="ticket-price">฿ <%= ticket.event.first_section.price %></span>
-                        <span class="purchase-date">purchased on <%= ticket.created_at %></span>
+                        <span class="ticket-price">฿ <%= payment.event.first_section.price %></span>
+                        <span class="purchase-date">purchased on <%= payment.purchased_status %></span>
                       </div>
                       <div class="col-xs-12 col-md-5">
                         <ul class="list-inline list-action-nav pull-right">
-                          <li><%= link_to "View Ticket", client_profile_ticket_path(current_user.id, ticket.id) %></li>
-                          <li><a href="<%= client_event_path(ticket.event.id) %>">View Event</a></li>
+                          <li><%= link_to "View Ticket", client_profile_ticket_path(current_user.id, payment.id) %></li>
+                          <li><a href="<%= client_event_path(payment.event.id) %>">View Event</a></li>
                         </ul>
                       </div>
                     </div>
