--- a/app/views/client/profile/tickets.html.erb
+++ b/app/views/client/profile/tickets.html.erb
@@ -10,38 +10,32 @@
       <div class="col-xs-12 col-md-9">
         <div class="ticket-list">
           <div class="list-header">
-            <h1>My Tickets</h1>
+            <h1>E-Ticket</h1>
             <ul class="list-inline">
-              <li><a href="#">Live (<%= @payments.count %>)</a></li>
+              <li><a href="#">Live (<%= @tickets.count %>)</a></li>
               <li>|</li>
               <li><a href="#">Past (0)</a></li>
             </ul>
           </div>
           <div class="list-body">
-            <% @payments.each do |payment| %>
+            <% @tickets.each do |ticket| %>
               <div class="ticket card-side-cover">
-                <a class="cover" style="background-image: url(<%= payment.event.galleries.first.media(:thumb) %>);" href="#"></a>
+                <a class="cover" style="background-image: url(<%= ticket.event.galleries.first.media(:thumb) %>);" href="#"></a>
                 <div class="info">
                   <div class="info-body">
                     <h4 class="title">
-                      <%= link_to client_profile_ticket_path(current_user.id, payment.id) do %>
-                        <%= payment.event.title %>
-                      <% end %>
+                      <%#= link_to client_profile_ticket_path(current_user.id, ticket.id) do %>
+                        <%= ticket.event.title %>
+                      <%# end %>
                     </h4>
-                    <div class="meta date"><%= payment.tickets.first.section.to_event_human %></div>
-                    <div class="meta location"><%= payment.event.location_name %></div>
+                    <div class="meta date"><%= ticket.section.to_event_human %></div>
+                    <div class="meta location"><%= ticket.event.location_name %></div>
                   </div>
                   <div class="info-footer">
                     <div class="row">
                       <div class="col-xs-12 col-md-7">
-                        <span class="ticket-price">฿ <%= payment.event.first_section.price %></span>
-                        <span class="purchase-date">purchased on <%= payment.purchased_status %></span>
-                      </div>
-                      <div class="col-xs-12 col-md-5">
-                        <ul class="list-inline list-action-nav pull-right">
-                          <li><%= link_to "View Ticket", client_profile_ticket_path(current_user.id, payment.id) %></li>
-                          <li><a href="<%= client_event_path(payment.event.id) %>">View Event</a></li>
-                        </ul>
+                        <span class="ticket-price">฿ <%= ticket.event.first_section.price %></span>
+                        <span class="purchase-date">purchased on <%= ticket.payment.purchased_status %></span>
                       </div>
                     </div>
                   </div>
