--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -94,7 +94,7 @@
         </div>
         <div class="table-responsive">
           <table class="table table-hover">
-            <% @event.sections.each do |section| %>
+            <% @event.sections.available.each do |section| %>
             <!-- <input type="hidden" name="" value="<%= section.id %>"> -->
             <tr>
               <td>
