--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -42,7 +42,7 @@
                 <% if current_user.present? %>
                   <% if current_user.can_organizer? %>
                     <li>
-                      <%= link_to "Organizer", "/organizer" %>
+                      <%= link_to "Organizer", "/organizer", target: '_self' %>
                     </li>
                   <% end %>
                   <li class="dropdown user-dropdown">
@@ -156,5 +156,53 @@
   </div>
   <%= javascript_include_tag 'client/core', 'data-turbolinks-track' => true %>
 
+  <!-- Bootstrap Datetimepicker -->
+  <!-- <link type="stylesheet" href="/src/packages/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css" />
+  <script src="/src/packages/bootstrap-datetimepicker/js/moment.js"></script>
+  <script src="/src/packages/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script> -->
+
+  <!-- Mustache -->
+  <!-- <script src="/src/packages/mustache/mustache.min.js"></script> -->
+
+  <!-- Jquery UI - Sortable -->
+  <!-- <link rel="stylesheet" href="/src/packages/jquery-ui/css/ui-lightness/jquery-ui-1.10.4.custom.min.css" />
+  <script src="/src/packages/jquery-ui/js/jquery-ui-1.10.4.custom.min.js"></script> -->
+<!--
+  <script type="text/javascript">
+  var init_datetimepicker, on_ticket_add, on_ticket_delete;
+
+    init_datetimepicker = function(element) {
+      $('.datepicker', element).datetimepicker({
+        format: 'DD/MM/YYYY'
+      });
+      $('.timepicker', element).datetimepicker({
+        format: 'LT',
+        stepping: 15
+      });
+    };
+
+    on_ticket_add = function(button) {
+      var element, rendered, template;
+      template = $('#new-ticket-template').html();
+      Mustache.parse(template);
+      rendered = Mustache.render(template, {});
+      element = $(rendered);
+      $('.ticket-list tbody').append(element);
+      init_datetimepicker(element);
+      return false;
+    };
+
+    on_ticket_delete = function(button) {
+      var element;
+      element = $(button).parents('.ticket');
+      element.remove();
+      return false;
+    };
+
+    $(function() {
+      init_datetimepicker($('body'));
+      on_ticket_add();
+    });
+  </script> -->
 </body>
 </html>
