--- a/app/views/organizer/events/edit.html.erb
+++ b/app/views/organizer/events/edit.html.erb
@@ -57,8 +57,8 @@
             </div>
             <div class="image-list sortable row">
               <% @images.each do |image| %>
-              <div class="col-xs-6" data-id="<%= image[:id] %>">
-                <div class="image" style="background-image: url(<%= image[:url] %>);"></div>
+              <div class="col-xs-6" data-id="<%= image.id %>">
+                <div class="image" style="background-image: url(<%= image.media(:thumb) %>);"></div>
               </div>
               <% end %>
             </div>
@@ -85,24 +85,24 @@
             </thead>
             <tbody>
               <% @sections.each do |section| %>
-              <tr class="ticket" id="ticket-<%= section[:id] %>" data-ticket-id="<%= section[:id] %>">
-                <td><input class="form-control" type="text" name="ticket[<%= section[:id] %>][title]" value="<%= section[:title] %>" placeholder="eg. General, VIP" /></td>
-                <td><input class="form-control" type="number" name="ticket[<%= section[:id] %>][available]" value="<%= section[:available] %>" /></td>
-                <td><input class="form-control" type="number" name="ticket[<%= section[:id] %>][price]" value="<%= section[:price] %>" /></td>
+              <tr class="ticket" id="ticket-<%= section.id %>" data-ticket-id="<%= section.id %>">
+                <td><input class="form-control" type="text" name="ticket[<%= section.id %>][title]" value="<%= section.title %>" placeholder="eg. General, VIP" /></td>
+                <td><input class="form-control" type="number" name="ticket[<%= section.id %>][available]" value="<%= section.available %>" /></td>
+                <td><input class="form-control" type="number" name="ticket[<%= section.id %>][price]" value="<%= section.price %>" /></td>
                 <td width="200">
                   <div class="input-group datepicker">
-                    <input type="text" class="form-control" name="ticket[<%= section[:id] %>][date]" value="<%= section[:date] %>" />
+                    <input type="text" class="form-control" name="ticket[<%= section.id %>][event_time]" value="<%= section.event_time %>" />
                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                   </div>
                 </td>
                 <td width="200">
                   <div class="input-group timepicker">
-                    <input class="form-control" type="text" name="ticket[<%= section[:id] %>][start_time]" value="<%= section[:start_time] %>" />
+                    <input class="form-control" type="text" name="ticket[<%= section.id %>][end_time]" value="<%= section.end_time %>" />
                     <span class="input-group-addon"><i class="fa fa-clock-o"></i></span>
                   </div>
                 <td width="200">
                   <div class="input-group timepicker">
-                    <input class="form-control" type="text" name="ticket[<%= section[:id] %>][end_time]" value="<%= section[:end_time] %>" />
+                    <input class="form-control" type="text" name="ticket[<%= section.id %>][event_time]" value="<%= section.event_time %>" />
                     <span class="input-group-addon"><i class="fa fa-clock-o"></i></span>
                   </div>
                 </td>
@@ -142,7 +142,8 @@
 <%= render partial: "layouts/parts/google_maps" %>
 
 <!-- Template -->
-<script id="new-ticket-template" type="x-tmpl-mustache">
+<%= render partial: "layouts/parts/section" %>
+<!-- <script id="new-ticket-template" type="x-tmpl-mustache">
   <tr class="ticket new-ticket">
     <td><input class="form-control" type="text" name="new_ticket_names[]" value="" placeholder="eg. General, VIP" /></td>
     <td><input class="form-control" type="number" name="new_ticket_availables[]" value="" /></td>
@@ -170,7 +171,7 @@
       <a class="btn btn-sm btn-default btn-ticket-add" href="#" onclick="return on_ticket_add(this);"><i class="fa fa-plus"></i></a>
     </td>
   </tr>
-</script>
+</script> -->
 
 <script> //Init Function
   function init_datetimepicker(element) {
