--- a/app/views/organizer/parts/_organizer-nav.html.erb
+++ b/app/views/organizer/parts/_organizer-nav.html.erb
@@ -6,7 +6,7 @@
     <%= link_to "Manage Event", organizer_events_path %>
   </li>
   <li id="menu-create-event">
-    <%= link_to "Create New Event", new_organizer_event_path %>
+    <%= link_to "Create New Event", new_organizer_event_path, target: '_self'%>
   </li>
   <!-- <li id="menu-settings"><a href="/organizer/settings">Account</a></li>
   <li id="menu-logout"><a href="/organizer/logout">Logout</a></li> -->
