--- a/app/views/payment_mailer/ticket.html.erb
+++ b/app/views/payment_mailer/ticket.html.erb
@@ -18,7 +18,7 @@
                 <tr>
                   <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
                     <h1 style="background: black; color: white; padding: 5px; margin-bottom: 3px; display: inline-block;">
-                      Hi Bow, here’s your tickets!
+                      Hi <%= "#{@user.first_name}" %>, here’s your tickets!
                     </h1>
                     <h1 style="padding: 0px 5px; padding-bottom: 30px;">
                       It’s time to get excited! 😎
